Booking app verion: 1.0

--- a/.env
+++ b/.env
@@ -5,3 +5,14 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://taohaisung:taohaisung@booking-app.jxkmsks.mongodb.net/test"
+
+GITHUB_ID=2c85750a72d1cc917ced
+GITHUB_SECRET=2512cf485d93f1dbb83420a4534be3fb1cccfd55
+
+GOOGLE_ID=273119016532-aqnuibqo0m3h5tre63j8m8quk0qmfugl.apps.googleusercontent.com
+GOOGLE_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="df041anls"
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
