--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
         "@types/leaflet": "^1.9.3",
         "@types/react-date-range": "^1.4.4",
         "autoprefixer": "^10.4.14",
+        "eslint": "8.42.0",
+        "eslint-config-next": "13.4.4",
         "postcss": "^8.4.23",
         "prisma": "^4.14.1",
         "tailwindcss": "^3.3.2"
-    }
+    },
+    "postinstall": "prisma generate"
 }
