--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "prisma generate && next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "postinstall": "prisma generate"
     },
     "dependencies": {
         "@next-auth/prisma-adapter": "^1.0.6",
@@ -43,6 +44,5 @@
         "postcss": "^8.4.23",
         "prisma": "^4.14.1",
         "tailwindcss": "^3.3.2"
-    },
-    "postinstall": "prisma generate"
+    }
 }
